# algo-lab

./: README.md  pyproject.toml
src/algo_lab/: clique_counting.py  orientation.py
tests/: test_clique_counting.py
